<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:foregroundTint="@android:color/darker_gray"
    android:isScrollContainer="false"
    tools:context=".MainActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/first"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="281dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:srcCompat="@drawable/first" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="192dp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/editText"
                    app:layout_constraintStart_toEndOf="@+id/editText"
                    app:layout_constraintTop_toTopOf="@+id/editText" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/editText4"
                    app:layout_constraintStart_toEndOf="@+id/editText4"
                    app:layout_constraintTop_toTopOf="@+id/editText4" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="63dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/b"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/editText2"
                    app:layout_constraintStart_toEndOf="@+id/editText2"
                    app:layout_constraintTop_toTopOf="@+id/editText2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:text="@string/c"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="83dp"
                    android:text="@string/d"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    tools:text="результат першого завдання" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/button_color"
                    android:text="@string/res1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="83dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/second"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="178dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="70dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.705"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:srcCompat="@drawable/second" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/editText5"
                    app:layout_constraintStart_toEndOf="@+id/editText5"
                    app:layout_constraintTop_toTopOf="@+id/editText5" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/r"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText5" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="95dp"
                    android:text="@string/x"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/button_color"
                    android:text="@string/res2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText5" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    tools:text="результат другого завдання" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/third"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button3"
                    tools:text="результат третього завдання" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="6dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="95dp"
                    android:text="@string/p"
                    app:layout_constraintStart_toEndOf="@+id/textView15"
                    app:layout_constraintTop_toTopOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/n"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText9" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/button_color"
                    android:text="@string/fromFile1"
                    app:layout_constraintBottom_toBottomOf="@+id/button"
                    app:layout_constraintStart_toEndOf="@+id/button"
                    app:layout_constraintTop_toTopOf="@+id/button" />

                <EditText
                    android:id="@+id/editText10"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/editText9"
                    app:layout_constraintStart_toEndOf="@+id/editText9"
                    app:layout_constraintTop_toTopOf="@+id/editText9" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="198dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:srcCompat="@drawable/third" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/button_color"
                    android:text="@string/fromFile1"
                    app:layout_constraintBottom_toBottomOf="@+id/button2"
                    app:layout_constraintStart_toEndOf="@+id/button2"
                    app:layout_constraintTop_toTopOf="@+id/button2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/button_color"
                    android:text="@string/res3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText9" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/button_color"
                    android:text="@string/fromFile1"
                    app:layout_constraintStart_toEndOf="@+id/button3"
                    app:layout_constraintTop_toTopOf="@+id/button3" />
                />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>